syntax='proto3';
package typedefs;
option go_package ='./typedefs';
message Message{
  message Propose{
    bytes content=1;
  }

  message Echo{
    repeated bytes encodingShares=1;
    bytes messageHash=2;
    repeated int64 sharesIndices=3;
  }

  message Ready{
    bytes encodingShare=1;
    bytes messageHash=2;
    int64 index=3;
  }

  oneof op{
    Propose propose_inst=3;
    Echo echo_inst=4;
    Ready ready_inst=5;
  }
}
message Instruction {
  Message operation=1;
}